# crazychoir

./: .gitignore  .gitmodules  README.md  _config.yml  citeus.md  documentation.md  index.md  installation.md  requirements.txt  video.md
_layouts/: default.html
crazychoir/: package.xml  setup.cfg  setup.py
crazychoir_examples/: package.xml  setup.cfg  setup.py
crazychoir_examples/launch/: aggregative_lighthouse.launch.py  aggregative_moving_intruder_mixed.launch.py  aggregative_moving_intruder_webots.launch.py  aggregative_webots.launch.py  bearingformationcontrol.launch.py  collision_webots.launch.py  collision_webots_vel.launch.py  formation_rviz.launch.py  formation_vicon.launch.py  formation_webots.launch.py  goto_webots.launch.py  huge_formation_webots.launch.py  letter_formation_webots.launch.py  task_assignment_vicon.launch.py  task_assignment_webots.launch.py  tracking.launch.py  tracking_vicon.launch.py  tracking_webots.launch.py
crazychoir_examples/resource/: crazyflie.urdf  crazyflie_fpqr.urdf  crazyflie_vel.urdf  crazyflie_xyz.urdf  real_pose_lighthouse.urdf  real_pose_vicon.urdf
crazychoir_examples/worlds/: empty_world.wbt  formation_world.wbt  huge_formation.wbt  letter_formation_world.wbt  obj_crazyflie.wbt  obj_crazyflie_red.wbt  obj_real_pose.wbt  obj_sphere.wbt  obj_target.wbt  task_assignment_world.wbt  tracking_world.wbt  (+1 more)
crazychoir_interfaces/: CMakeLists.txt  package.xml  setup.py
crazychoir_interfaces/msg/: FullState.msg
docker/: Dockerfile  README.md  README_docker.md  buildImage  createContainer  final_setup.sh  requirements.txt
(+106 files in other folders)
